neetcode 22/150: Maximum Depth of Binary Tree
GitOrigin-RevId: 069e817b08ae530efbc7ec0fa56fc2d2be4279cb